# htsp-vala

./: .gitignore  Makefile.am  autogen.sh  config.h  configure.ac
po/: .gitignore
src/: .gitignore  Makefile.am  main.vala  test.vala
